[package]
name = "rq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bardecoder = "0.5.0"
chrono = "0.4.31"
env_logger = "0.10.0"
futures = "0.3.28"
image = { version = "0.24.7", default-features = false, features = ["png"] }
itertools = "0.11.0"
libc = "0.2.149"
log = "0.4.20"
smithay-client-toolkit = "0.18.0"
tiny-skia = "0.11.2"
wayland-client = "0.31.1"
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
zbus = "3.14.1"
