[package]
name = "rq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
env_logger = { version = "0.11.1", features = ["color"]}
futures = "0.3.28"
image = { version = "0.24.9", default-features = false, features = ["png"] }
itertools = "0.14.0"
libc = "0.2.149"
log = "0.4.20"
rqrr = "0.9.3"
smithay-client-toolkit = "0.19.2"
tiny-skia = "0.11.2"
wayland-client = "0.31.1"
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
zbus = "5.5.0"
